--- a/config/features.yml
+++ b/config/features.yml
@@ -169,3 +169,7 @@
 - name: crm_integration
   display_name: CRM Integration
   enabled: false
+- name: channel_voice
+  display_name: Voice Channel
+  enabled: false
+  chatwoot_internal: true
