feat: notion OAuth setup (#11765)
Co-authored-by: Muhsin Keloth <muhsinkeramam@gmail.com>

--- a/config/features.yml
+++ b/config/features.yml
@@ -173,3 +173,6 @@
   display_name: Voice Channel
   enabled: false
   chatwoot_internal: true
+- name: notion_integration
+  display_name: Notion Integration
+  enabled: false
