--- a/config/features.yml
+++ b/config/features.yml
@@ -180,6 +180,7 @@
   display_name: Captain V2
   enabled: false
   premium: true
+  chatwoot_internal: true
 - name: whatsapp_embedded_signup
   display_name: WhatsApp Embedded Signup
   enabled: false
