--- a/config/installation_config.yml
+++ b/config/installation_config.yml
@@ -170,6 +170,10 @@
   display_title: 'OpenAI Model'
   description: 'The OpenAI model configured for use in Captain AI. Default: gpt-4o-mini'
   locked: false
+- name: CAPTAIN_OPEN_AI_ENDPOINT
+  display_title: 'OpenAI API Endpoint (optional)'
+  description: 'The OpenAI endpoint configured for use in Captain AI. Default: https://api.openai.com/'
+  locked: false
 - name: CAPTAIN_FIRECRAWL_API_KEY
   display_title: 'FireCrawl API Key (optional)'
   description: 'The FireCrawl API key for the Captain AI service'
